--- a/package.json
+++ b/package.json
@@ -4,10 +4,13 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "axios": "^0.15.2",
     "govtrack-node": "^0.2.0"
   },
   "devDependencies": {
-    "grunt": "^1.0.1"
+    "copy-webpack-plugin": "^4.0.1",
+    "grunt": "^1.0.1",
+    "promise": "^7.1.1"
   },
   "scripts": {
     "start": "node run.js"
