--- a/package.json
+++ b/package.json
@@ -3,13 +3,12 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "dependencies": {
-    "axios": "^0.15.2",
-    "govtrack-node": "^0.2.0"
-  },
   "devDependencies": {
+    "angular": "^1.5.8",
     "copy-webpack-plugin": "^4.0.1",
+    "govtrack-node": "^0.2.0",
     "grunt": "^1.0.1",
+    "ng-annotate-webpack-plugin": "^0.1.3",
     "promise": "^7.1.1"
   },
   "scripts": {
