--- a/package.json
+++ b/package.json
@@ -6,10 +6,15 @@
   "devDependencies": {
     "angular": "^1.5.8",
     "copy-webpack-plugin": "^4.0.1",
+    "css-loader": "^0.26.0",
+    "extract-text-webpack-plugin": "^1.0.1",
     "govtrack-node": "^0.2.0",
     "grunt": "^1.0.1",
     "ng-annotate-webpack-plugin": "^0.1.3",
-    "promise": "^7.1.1"
+    "node-sass": "^3.13.0",
+    "promise": "^7.1.1",
+    "sass-loader": "^4.0.2",
+    "webpack-dev-server": "^1.16.2"
   },
   "scripts": {
     "start": "node run.js"
