--- a/package.json
+++ b/package.json
@@ -1,24 +1,15 @@
 {
-  "name": "congress",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
   "devDependencies": {
     "angular": "^1.5.8",
     "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.26.0",
     "extract-text-webpack-plugin": "^1.0.1",
-    "govtrack-node": "^0.2.0",
     "grunt": "^1.0.1",
     "ng-annotate-webpack-plugin": "^0.1.3",
-    "node-sass": "^3.13.0",
     "promise": "^7.1.1",
-    "sass-loader": "^4.0.2",
     "webpack-dev-server": "^1.16.2"
   },
   "scripts": {
-    "start": "node run.js"
-  },
-  "author": "",
-  "license": "ISC"
+    "start": "node node_modules/webpack-dev-server/bin/webpack-dev-server.js --progress --content-base build/"
+  }
 }
