--- a/package.json
+++ b/package.json
@@ -1,15 +1,26 @@
 {
-  "devDependencies": {
+  "dependencies": {
     "angular": "^1.5.8",
+    "fuse.js": "^2.5.0"
+  },
+  "devDependencies": {
     "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.26.0",
     "extract-text-webpack-plugin": "^1.0.1",
+    "govtrack-node": "^0.2.0",
     "grunt": "^1.0.1",
+    "jasmine": "^2.5.2",
+    "jasmine-core": "^2.5.2",
+    "karma": "^1.3.0",
+    "karma-jasmine": "^1.0.2",
+    "karma-phantomjs-launcher": "^1.0.2",
+    "karma-webpack": "^1.8.0",
     "ng-annotate-webpack-plugin": "^0.1.3",
     "promise": "^7.1.1",
     "webpack-dev-server": "^1.16.2"
   },
   "scripts": {
-    "start": "node node_modules/webpack-dev-server/bin/webpack-dev-server.js --progress --content-base build/"
+    "start": "node node_modules/webpack-dev-server/bin/webpack-dev-server.js --progress --content-base build/",
+    "test": "./node_modules/karma/bin/karma start --auto-watch"
   }
 }
