Got some nice interaction and colors working with material design

--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "dependencies": {
     "angular": "^1.5.8",
     "angular-route": "^1.5.8",
-    "fuse.js": "^2.5.0"
+    "fuse.js": "^2.5.0",
+    "material-design-lite": "^1.2.1"
   },
   "devDependencies": {
     "copy-webpack-plugin": "^4.0.1",
