--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "extract-text-webpack-plugin": "^1.0.1",
     "govtrack-node": "^0.2.0",
     "grunt": "^1.0.1",
+    "html-webpack-plugin": "^2.24.1",
     "jasmine": "^2.5.2",
     "jasmine-core": "^2.5.2",
     "karma": "^1.3.0",
