--- a/data/.gitignore
+++ b/data/.gitignore
@@ -1,2 +1,6 @@
 *
 !.gitignore
+
+# Hang on to the raw Congressional Districts file so we don't
+# have to download it again.
+!congressional_districts.txt
