--- a/package.json
+++ b/package.json
@@ -19,9 +19,10 @@
     "karma": "^1.3.0",
     "karma-jasmine": "^1.0.2",
     "karma-phantomjs-launcher": "^1.0.2",
-    "karma-webpack": "^1.8.0",
+    "karma-webpack": "^2.0.1",
     "ng-annotate-webpack-plugin": "^0.1.3",
     "promise": "^7.1.1",
+    "webpack": "^1.14.0",
     "webpack-dev-server": "^1.16.2"
   },
   "scripts": {
