--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "karma-webpack": "^2.0.1",
     "ng-annotate-webpack-plugin": "^0.1.3",
     "promise": "^7.1.1",
+    "request": "^2.79.0",
     "webpack": "^1.14.0",
     "webpack-dev-server": "^1.16.2"
   },
