--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "underscore": "^1.8.3"
   },
   "devDependencies": {
+    "angular-mocks": "^1.6.1",
     "babyparse": "^0.4.6",
     "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.26.0",
